# MetaTrans

./: CMakeLists.txt  CountOpcode.cpp  Filter.cpp  MetaData.cpp  MetaData.h  MetaFilter.cpp  MetaInst.cpp  MetaLearner.cpp  MetaMatcher.cpp  MetaPass.cpp  MetaTrans.cpp  MetaTrans.h  MetaUtils.cpp  README.md  Utils.cpp  asm.yml  dump  ir.yml  test.yaml  utils.cpp
include/meta/: Filter.h  MetaData.h  MetaFilter.h  MetaLearner.h  MetaMatcher.h  MetaPass.h  MetaStream.h  MetaTrans.h  MetaUtils.h  Observer.h  utils.h
